# www.gregorykapfhammer.com

./: .gitignore  .gitmodules  404.qmd  AGENTS.md  GEMINI.md  README.md  _back-blog.qmd  _gist.qmd  _publish.yml  _quarto-develop.yml  _quarto-optimize.yml  _quarto.yml  biography.qmd  gulpfile.js  index.md  index.qmd  llms.txt  papers.qmd  presentations.qmd  pyproject.toml  research.qmd  robots.txt  shell.nix  styles.css  theme-dark.scss  united-dark.scss  united-light.scss  wrangler.toml
.github/: publish.yml
.github/workflows/: publish.yml
_include/html/: header-include.html  structured-data.html
_include/js/: get-the-gist.js  instant-page.js  mastodon-timeline.js
biography/: index.qmd
blog/: index.qmd
blog/Parry2023/: index.qmd
blog/automated-fault-localization-database-applications/: index.qmd
blog/automated-repair-responsive-layouts/: index.qmd
blog/big-data/: index.qmd
blog/big-data-big-deal/: index.qmd
blog/cannier-flaky-test-detection/: index.qmd
blog/consistently-leave-insert-mode/: index.qmd
blog/defect-prediction-test-prioritization/: index.qmd
blog/directory-zooming-command-line/: index.qmd
blog/discover-systemic-test-flakiness/: index.qmd
blog/distraction-free-terminal-timer/: index.qmd
blog/doubling-experiments-performance-evaluation/: index.qmd
blog/dynamic-invariant-detection-databases/: index.qmd
blog/five-words-to-avoid/: index.qmd
blog/flake-it-till-you-make-it/: index.qmd
blog/flake16-new-frontier-flaky-tests/: index.qmd
contact/: index.qmd
defect-prediction-test-prioritization/: index.qmd
emailthanks/: index.qmd
for-llms/: index.qmd
html/: header-include.html
js/: get-the-gist.js  mastodon-timeline.js
media/: media.yml
principles/: index.qmd
research/: index.qmd
schedule/: index.qmd
scripts/: README.md  build-local.py  copy-files.py  defer-javascript.py  generate-bootstrap-icons-subset.py  generate-fontawesome-subset.py  minify-files.py  parse-bibliography.py  preload-critical-resources.py  publish-site.py  purge-bootstrap-css-simple.py  self-host-cdn-resources.py  test-fontawesome-subset.py
seed/: index.qmd
seedthanks/: index.qmd
service/: index.qmd  service.yml
software/: index.qmd
src/: parse.py
support/: index.qmd
teaching/: index.qmd
(+76 files in other folders)
