[project]
name = "gregorykapfhammer"
version = "0.1.0"
description = ""
authors = [{ name = "Gregory M. Kapfhammer", email = "gkapfham@allegheny.edu" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "jupyter>=1.0.0,<2",
    "matplotlib>=3.7.1,<4",
    "pyyaml>=6.0,<7",
    "rich>=13.3.5,<14",
    "bibtexparser>=1.4.0,<2",
    "csscompressor>=0.9.5,<0.10",
    "rjsmin>=1.2.1,<2",
    "minify-html>=0.15.0,<0.16",
]

[dependency-groups]
dev = ["black>=23.3.0,<24"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = [
    "E501", # do not check line length
]
select = [
    "E",    # pycodestyle errors
    "I",    # isort
    "F",    # Pyflakes
    "PL",   # pylint
    "Q",    # flake8-quotes
    "RUF",  # ruff-specific
    "W",    # pycodestyle warnings
    "T201"  # flake8-print
]
